<resources>
    <string name="app_name">蓝火</string>
    <string name="home_name">文科中的技术宅</string>
    <string name="home_news">最新</string>
    <string name="home_page">主页</string>
    <string name="list_details">帖子详情</string>
    <string name="home_bbs">论坛</string>
    <string name="home_me">个人中心</string>
    <string name="login_name">登录妖火</string>
    <string name="send_cmd">下发指令</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="menu">菜单</string>
    <string name="search">搜索</string>
    <string name="exit_app_hint">再按一次退出程序</string>
    <string name="content_pic_title">图片附件</string>
    <string name="_0">0</string>
    <string name="bbs_res_share">资源共享</string>
    <string name="bbs_integrated_technology">综合技术</string>
    <string name="bbs_ml_talk_over">免流讨论</string>
    <string name="bbs_reward">有奖活动</string>
    <string name="bbs_tea_house">妖火茶馆</string>
    <string name="bbs_quest_answer">悬赏问答</string>
    <string name="bbs_textured_photo">贴图晒照</string>
    <string name="bbs_stationService">站务处理</string>
    <string name="bbs_complaint">投诉建议</string>
    <string name="bbs_announcement">网站公告</string>
    <string name="massage">消息</string>

    <string name="my_id">我的ID</string>
    <string name="my_demon_crystal">我的妖晶</string>
    <string name="bank_savings">注册时间</string>
    <string name="my_experience">我的经验</string>
    <string name="rank">我的等级</string>
    <string name="my_title">我的头衔</string>
    <string name="my_identity">我的身份</string>
    <string name="management_authority">管理权限</string>
    <string name="search_value_empty_tip">请输入搜索内容</string>
    <string name="search_hint_tip">善用搜索</string>
    <string name="home_more">————————查看更多————————</string>
    <string name="error_use_vpn_exception">网络环境异常，请切换正常网络</string>
    <string name="error_unknown_exception">发生错误，请重试</string>
    <string name="error_socket_time_out_exception">网络超时</string>
    <string name="error_qesponse_null_pointer_exception">未能请求到数据，请稍后再试～</string>
    <string name="loading">加载中…</string>
    <string name="alert_dialog_tip_title">温馨提示</string>
    <string name="home_send_post_loading">正在发送帖子…</string>
    <string name="home_send_post_success">发帖成功</string>
    <string name="home_send_post_failure">发帖失败</string>
    <string name="list_tab_new_reply">最近回复</string>
    <string name="list_tab_new_send">最新发布</string>
    <string name="list_tab_marrow">本版精华</string>


    <string name="wei_zhi_title">捐赠·微信</string>
    <string name="wei_zhi_tip">微信扫一扫，或者点击\"去捐赠\"，在微信页面右上角菜单中 \"从相册中选取二维码\"。</string>
    <string name="ali_zhi_title">捐赠·支付宝</string>
    <string name="ali_zhi_tip">支付宝扫一扫，或者点击\"去捐赠\"\n您点滴支持，是我们最大动力</string>
    <string name="wei_loading">启动中…</string>
    <string name="act_switch">点击任何地方切换捐赠方式</string>
    <string name="donate">捐赠</string>
    <string name="donate_qa">捐赠二维码</string>
    <string name="msg">消息</string>
</resources>
