<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    app:srlPrimaryColor="?colorPrimary"
    app:srlAccentColor="@android:color/white"
    app:srlEnablePreviewInEditMode="true"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nesScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none"
      >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fitsSystemWindows="true">
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/shape_radius"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:elevation="2dp"
                android:padding="5dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toTopOf="@+id/view"
              >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                   >

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_marginTop="50dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_android"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nikeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="?colorPrimary"
                        app:layout_constraintEnd_toEndOf="@+id/avatar"
                        app:layout_constraintStart_toStartOf="@+id/avatar"
                        app:layout_constraintTop_toBottomOf="@+id/avatar"
                        app:layout_constraintBottom_toTopOf="@id/line_view"
                        tools:text="文科中的技术宅" />
                    <View
                        android:id="@+id/line_view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?colorPrimary"
                        app:layout_constraintBottom_toBottomOf="@+id/layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:elevation="2dp"
                android:padding="5dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    tools:ignore="UnusedAttribute">

                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/accountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/my_id"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        tools:layout_editor_absoluteX="5dp" />
                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/money"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/my_demon_crystal"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/accountNumber"
                        tools:layout_editor_absoluteX="5dp" />
                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/bankSavings"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/bank_savings"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/money"
                        tools:layout_editor_absoluteX="5dp" />
                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/experience"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/my_experience"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/bankSavings"
                        tools:layout_editor_absoluteX="5dp" />

                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/rank"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/rank"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/experience"
                        tools:layout_editor_absoluteX="5dp" />

                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/my_title"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/rank"
                        tools:layout_editor_absoluteX="5dp" />
                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/identity"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/my_identity"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/title"
                        tools:layout_editor_absoluteX="5dp" />
                    <com.townwang.yaohuo.ui.weight.view.YaoItemView
                        android:id="@+id/managementAuthority"
                        android:layout_width="match_parent"
                        android:layout_height="?listPreferredItemHeightSmall"
                        app:key="@string/management_authority"
                        app:keyColor="@color/md_black_1000"
                        app:keySize="@dimen/text14Size"
                        app:value="@string/_0"
                        app:valueColor="@color/cardview_dark_background"
                        app:valueSize="@dimen/text12Size"
                        app:layout_constraintTop_toBottomOf="@id/identity"
                        tools:layout_editor_absoluteX="5dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</com.scwang.smart.refresh.layout.SmartRefreshLayout>
